# mobile_parser

./: .env  .env.example  .gitignore  README.md  config.py  logger.py  main.py  pyproject.toml  requirements.txt
data/: lenta_msk_20260228_175829.json  lenta_msk_20260228_190811.xlsx  lenta_msk_20260228_200606.csv
src/: exporters.py  models.py  parsers.py
